--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -57,6 +57,23 @@
     <string name="favorite_title">Favorieten</string>
     <string name="no_favorites_text">Je hebt nog geen favorieten!</string>
     <string name="instructions_button_text">Instructies</string>
+    
+    <!--Profile Screen Strings-->
+    <string name="profile_title">Profiel:</string>
+    <string name="first_name_text">Voornaam:</string>
+    <string name="last_name_text">Achternaam:</string>
+    <string name="daily_limit_label">Dagelijkse limiet:</string>
+    <string name="daily_goal_label">Dagelijks doel:</string>
+
+    <!--Recipe Screen Strings-->
+    <string name="recipe_title">Recepten</string>
+    <string name="empty_recipe_text">Er zijn geen recepten in de database.</string>
+    <string name="recipe_in_favorites">Dit recept staat bij favorieten!</string>
+    <string name="ingredients_text">Ingrediënten</string>
+    <string name="steps_text">Recept stappen</string>
+
+    <!--Drink Records Strings-->
+    <string name="drink_records_title">Drink Records</string>
 
 
 </resources>
