--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="logout_text">Logout</string>
 
     <!--FluidIntakeDialog-->
+    <string name="dialog_title">Enter Fluid Intake</string>
     <string name="select_amount_text">Please select an amount</string>
     <string name="button_100ml_text" translatable="false">100ml</string>
     <string name="button_150ml_text" translatable="false">150ml</string>
@@ -77,5 +78,6 @@
 
     <!--Drink Records Strings-->
     <string name="drink_records_title">Drink Records</string>
+
 
 </resources>
