--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -73,8 +73,8 @@
     <string name="steps_text">Recept stappen</string>
 
     <!--Drink Records Strings-->
-    <string name="drink_records_title">Drink Records</string>
-
+    <string name="drink_records_title">Uw drankrecords</string>
+    <string name="zero_target_achieved">Doel behaald: 0%</string>
 
 
 </resources>
