--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="instructions_button_text">Instructions</string>
 
     <!--Profile Screen Strings-->
-    <string name="profile_title">Profile:</string>
+    <string name="profile_title">Profile</string>
     <string name="first_name_text">FirstName:</string>
     <string name="last_name_text">Lastname:</string>
     <string name="daily_limit_label">DailyLimit:</string>
@@ -73,8 +73,8 @@
     <string name="recipe_title">Recipes</string>
     <string name="empty_recipe_text">There are no recipes in the database.</string>
     <string name="recipe_in_favorites">This recipe is in favorites!</string>
-    <string name="ingredients_text">ingredients</string>
-    <string name="steps_text">steps</string>
+    <string name="ingredients_text">Ingredients</string>
+    <string name="steps_text">Steps</string>
 
     <!--Drink Records Strings-->
     <string name="drink_records_title">Your Drink Records</string>
